# theos

./: Cargo.toml  LICENSE-MIT  README.md  build.sh
.cargo/: config.toml
src/: lib.rs  main.rs
