[package]
name = "nostd_libc"
version = "0.1.0"
edition = "2024"
license="MIT"


[profile.dev]
panic="abort"
target = "x86_64-nostd.json"

[profile.release]
opt-level = 3
strip = true
debug = false
lto = true
codegen-units = 1
panic = "abort"
target = "x86_64-nostd.json"


[dependencies]
bootloader = "0.9"



[dependencies.libc]
version= "0.2.170"
default-features = false
